# dande.dev

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .prettierignore  .prettierrc  .taplo.toml  Cargo.toml  Dockerfile  LICENSE  README.md  changelog.config.js  clippy.toml  cloudflare-env.d.ts  cspell.config.yaml  eslint.config.mjs  fly.toml  leptosfmt.toml  next.config.ts  package.json  pnpm-lock.yaml  prettier.config.mjs  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml  tsconfig.json  wrangler.jsonc
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check-secrets.yml  fly-deploy.yml  pr.yml
.husky/: pre-commit
app/: Cargo.toml  build.rs  layout.tsx  page.tsx
app/src/: lib.rs  main.rs
app/src/components/: footer.rs  logo.rs  mod.rs
app/src/components/header/: core.rs  mobile_nav.rs  mod.rs  search_button.rs  theme_switcher.rs
app/src/components/ui/: mod.rs  tag.rs
app/src/components/ui/icon/: core.rs  icon_kind.rs  mod.rs  moon_icon.rs  social_icon.rs  sun_icon.rs
app/src/components/ui/icon/social_icon/: core.rs  mod.rs
app/src/errors/: about.rs  mod.rs  post.rs
app/src/pages/: layout.rs  mod.rs
app/src/pages/about/: layout.rs  mod.rs  not_found.rs  page.rs
app/src/pages/blog/: page.rs
app/src/pages/home/: page.rs
app/src/pages/post/: layout.rs  mod.rs  page.rs
app/src/server_functions/: about.rs  core.rs  mod.rs  post.rs
app/src/types/: post.rs
app/src/utils/: cn.rs  format.rs  mod.rs
client/: Cargo.toml
client/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/constants/: format.rs  mod.rs  path.rs  post.rs  theme.rs
domain/src/data/: header.rs  home.rs  mod.rs  path.rs  site_metadata.rs
domain/src/data/about/: default.md
domain/src/data/blog/: getting-started-with-tailwind-v4.md  my-first-blog-post.md
domain/src/types/: about.rs  header.rs  mod.rs  post.rs  site_metadata.rs
end2end/: package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
end2end/tests/: about-page.smoke.spec.ts  blog-page.smoke.spec.ts  home-page.smoke.spec.ts
generator/: Cargo.toml  process-rehype-prism-plus.mjs
generator/src/: add_default_language.rs  add_gfm_code_title.rs  add_relative_div.rs  generate_about.rs  generate_posts.rs  lib.rs  process_html_with_prism.rs
public/favicons/: site.webmanifest
public/styles/: prism.css
styles/: globals.css  tailwind.css
