#:schema https://json.schemastore.org/cargo.json

[workspace]
members = ["app", "client", "domain", "generator"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"

[workspace.dependencies]
# ===== External ===== #
axum = "0.7.9"
chrono.features = ["serde"]
chrono.version = "0.4.40"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
gray_matter = "0.2.8"
http = "1.3.1"
icondata = "0.5.0"
leptos.features = ["hydration", "nightly"]
leptos.version = "0.7.7"
leptos-use = "0.15.6"
leptos_axum = "0.7.7"
leptos_icons = "0.5.0"
leptos_meta = "0.7.7"
leptos_router.features = ["nightly"]
leptos_router.version = "0.7.7"
notify = "8.0.0"
pulldown-cmark.default-features = false
pulldown-cmark.version = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
tailwind_fuse = "0.3.1"
thiserror = "2.0.12"
tokio = "1.44.1"
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = "0.6.2"
wasm-bindgen = "=0.2.100"
web-sys = "0.3.77"

[profile.release]
panic = "abort"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"

[[workspace.metadata.leptos]]
assets-dir = "public"
bin-default-features = false
bin-features = ["ssr"]
bin-package = "app"
browserquery = "defaults"
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
env = "DEV"
# FIXME: Setup `hash-files` for cache in production
# hash-files = true
lib-default-features = false
lib-features = ["hydrate"]
lib-package = "client"
lib-profile-release = "wasm-release"
name = "dande_dev"
output-name = "dande_dev"
reload-port = 8081
site-addr = "127.0.0.1:8080"
site-pkg-dir = "pkg"
site-root = "target/site"
tailwind-input-file = "styles/tailwind.css"

[workspace.metadata.cargo-all-features]
denylist = ["axum", "leptos_axum", "tokio", "tower", "tower-http"]
skip_feature_sets = [["hydrate", "ssr"]]

[workspace.lints.clippy]
# ===== Allow ===== #
derive_partial_eq_without_eq = "allow"
module_name_repetitions = "allow"
tabs_in_doc_comments = "allow"
# ===== Deny ===== #
all.level = "deny"
all.priority = -1
cast_possible_truncation = "deny"
cast_precision_loss = "deny"
complexity.level = "deny"
complexity.priority = -1
correctness.level = "deny"
correctness.priority = -1
nursery.level = "deny"
nursery.priority = -1
pedantic.level = "deny"
pedantic.priority = -1
perf.level = "deny"
perf.priority = -1
style.level = "deny"
style.priority = -1
suspicious.level = "deny"
suspicious.priority = -1

[workspace.lints.rust]
# ===== Allow ===== #
ambiguous_glob_reexports = "allow"
# ===== Deny ===== #
missing_debug_implementations = "deny"
rust_2018_idioms.level = "deny"
rust_2018_idioms.priority = -1
unused_lifetimes = "deny"
unused_results = "deny"
# ===== Warn ===== #
dead_code = "warn"
